# hvcc

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  hv2ir.py  hvcc.py  ir2c.py  max2hv.py  pd2hv.py  proj_scripts.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup-run.sh  setup.cfg  tox.dev.ini  tox.ini
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  irc.yml
core/hv2ir/: BufferPool.py  HLangNoise.py  HeavyGraph.py  HeavyLangObject.py  HeavyParser.py  LocalVars.py  hv2ir.py
docs/: 01.introduction.md  02.getting_started.md  03.gen.daisy.components.md  03.gen.daisy.md  03.gen.dpf.md  03.gen.external.md  03.gen.fabric.md  03.gen.fmod.md  03.gen.javascript.md  03.gen.owl.md  03.gen.pdext.md  03.gen.unity.md  03.gen.wwise.md  03.generators.md  04.midi.md  08.dpf.md  08.heavy_ir_lang.md  09.supported_vanilla_objects.md  10.unsupported_vanilla_objects.md  11.heavy_gui_ir.md  15.Unsupported_vanilla_objects.md
docs/ADRs/: ADR-001-GUI-Send-Receive.md  ADR-002-pd2gui-Parser.md  ADR-003-Control-Rate-Expr.md  ADR-004-Signal-Rate-Expr.md
examples/daisy/: .README.md.swp
examples/dpf/: README.md  dpf_example.json  dpf_example.pd  dpf_midi_thru.json  dpf_midi_thru.pd
generators/c2vst2/: c2vst2.py
generators/ir2c/: ControlVar.py  HeavyObject.py  ir2c.py  ir2c_perf.py
generators/ir2c/static/: HvLightPipe.c
hvcc/: __init__.py  compiler.py  main.py  utils.py  version.py
hvcc/core/hv2ir/: BufferPool.py  Connection.py  HIrConvolution.py  HIrExpr.py  HIrInlet.py  HIrLorenz.py  HIrOutlet.py  HIrPack.py  HIrRFFT.py  HIrReceive.py  HIrSend.py  HIrSwitchcase.py  HIrTabhead.py  HIrTabread.py  HIrTabwrite.py  HLangAdc.py  HLangBinop.py  HLangBiquad.py  HLangDac.py  HLangDelay.py  HLangLine.py  HLangMessage.py  HLangPhasor.py  HLangPrint.py  HLangRandom.py  HLangReceive.py  HLangSend.py  HLangSequence.py  HLangSlice.py  HLangSystem.py  HLangTable.py  HLangUnop.py  HLangVar.py  HLangVario.py  HeavyException.py  HeavyGraph.py  HeavyIrObject.py  HeavyLangObject.py  HeavyParser.py  LocalVars.py  (+1 more)
hvcc/core/json/: heavy.ir.json  heavy.lang.json  heavy_ir.py  heavy_lang.py
hvcc/generators/: filters.py
hvcc/generators/c2daisy/: c2daisy.py  daisy_board_jen.py  parameters.py
hvcc/generators/c2dpf/: c2dpf.py
hvcc/generators/c2fabric/: c2fabric.py
hvcc/generators/c2fmod/: c2fmod.py
hvcc/generators/c2fmod/templates/: CMakeLists.txt
hvcc/generators/c2fmod/templates/include/: README.md
hvcc/generators/c2fmod/templates/src/: {{name}}.cpp  {{name}}.plugin.js
hvcc/generators/c2js/: c2js.py
hvcc/generators/c2owl/: c2owl.py
hvcc/generators/c2pdext/: c2pdext.py
hvcc/generators/c2unity/: c2unity.py
hvcc/generators/c2unity/templates/: CMakeLists.txt
hvcc/generators/c2unity/templates/src/: Hv_{{name}}_AudioLib.cs  PluginList.h  {{name}}.cpp
hvcc/generators/c2wwise/: c2wwise.py
hvcc/generators/ir2c/: ControlBinop.py  ControlCast.py  ControlDelay.py  ControlExpr.py  ControlIf.py  ControlMessage.py  ControlPack.py  ControlPrint.py  ControlRandom.py  ControlReceive.py  ControlSend.py  ControlSlice.py  ControlSwitchcase.py  ControlSystem.py  ControlTabhead.py  ControlTabread.py  ControlTabwrite.py  ControlUnop.py  ControlVar.py  HeavyObject.py  HeavyTable.py  PrettyfyC.py  SignalBiquad.py  SignalCPole.py  SignalConvolution.py  SignalDel1.py  SignalEnvelope.py  SignalExpr.py  SignalLine.py  SignalLorenz.py  SignalMath.py  SignalPhasor.py  SignalRFFT.py  SignalRPole.py  SignalSamphold.py  SignalSample.py  SignalTabhead.py  SignalTabread.py  SignalTabwrite.py  SignalVar.py  (+5 more)
hvcc/generators/types/: meta.py
hvcc/interpreters/pd2gui/: PdGUIParser.py  PdParser.py  pd2gui.py
hvcc/interpreters/pd2hv/: Connection.py  HeavyGraph.py  HeavyObject.py  HvSwitchcase.py  NotificationEnum.py  PdAudioIoObject.py  PdBinopObject.py  PdExprObject.py  PdGraph.py  PdLetObject.py  PdLibSignalGraph.py  PdMessageObject.py  PdObject.py  PdPackObject.py  PdParser.py  PdRaw.py  PdReceiveObject.py  PdRouteObject.py  PdSelectObject.py  PdSendObject.py  PdTableObject.py  PdTriggerObject.py  PdUnpackObject.py  pd2hv.py
hvcc/types/: GUI.py  IR.py  Lang.py  compiler.py  meta.py
interpreters/max2hv/: MaxBinopObject.py  MaxGraph.py  MaxObject.py  MaxParser.py  MaxUnopObject.py  max2hv.py
interpreters/pd2hv/: HeavyGraph.py  HeavyObject.py  PdAudioIoObject.py  PdObject.py  PdParser.py  PdReceiveObject.py  PdSendObject.py  PdUnpackObject.py  pd2hv.py  pdowl.py
tests/: Heavy_heavy_pack.cpp  Heavy_heavy_pack.hpp  Heavy_heavy_w_impl.cpp  a.out  run_feature.py  test.cpp  test_control.py  test_control_expr.py  test_feature.py  test_midi.cpp  test_midi.py  test_signal.py  test_signal_expr.py  test_signal_rfft.py  test_speed.py  test_speed_avx.py  test_unity.py  test_uploader.py
tests/framework/: base_control.py  base_midi.py  base_signal.py  base_speed.py  base_test.py
tests/framework/template/: Makefile  build.bat
tests/integration/: test_pd2gui.py
tests/integration/data/: abs_args.pd  gui_abs_args.golden.json  gui_abs_args.pd  gui_abstraction.golden.json  gui_abstraction.pd  gui_dollarzero.golden.json  gui_dollarzero.pd  gui_subpatch.golden.json  gui_subpatch.pd  gui_subtest.golden.json  subgraph.pd  subgraph_inv.pd
tests/pd/control/: dgb-add.pd  dgb-expr-gc.golden.txt  dgb-expr-gc.pd  dgb-expr-many.golden.txt  dgb-expr-many.pd  dgb-expr-sig.golden.txt  dgb-expr-sig.pd  dgb-expr.pd  dgb-expr2.golden.txt  dgb-expr2.pd  dgb-expr3.golden.txt  dgb-expr3.pd  dgb-pack.pd  dgb-test.golden.txt  dgb-test.pd  test-delay.golden.txt  test-delay.pd  test-extern_table.golden.txt  test-extern_table.pd  test-gui-send-receive.golden.txt  test-gui-send-receive.pd  test-gui.pd  test-pack-symbol.golden.txt  test-pack-symbol.pd  test-remote-msg.golden.txt  test-remote-msg.pd  test-select-min.golden.txt  test-select-min.pd  test-select-symbol.golden.txt  (+5 more)
tests/src/: create_test_midi.cpp  test_control.c  test_midi.cpp  test_signal.c
tests/unit/: conftest.py  test_pd2gui.py  test_regex.py
utils/: hvhash.py  hvutils.py
(+344 files in other folders)
